fixed error not showing up when sign up

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -423,8 +423,16 @@ footer.main-footer {
   margin-top: 1rem;
 }
 
-.cs-auth-wrapper .cs-textfield-form .mdc-text-field {
-  margin-bottom: 1rem;
+.cs-auth-wrapper .cs-textfield-form .mdc-text-field:not(:first-child) {
+  margin-top: 1rem;
+}
+
+.mdc-text-field-helper-text {
+  opacity: 1;
+}
+
+.mdc-text-field-helper-text-error {
+  color: #b00020 !important;
 }
 
 .cs-auth-wrapper .cs-auth-action {
